XW-2591 | fix jumping images in PI, image tag size different than image file size

--- a/extensions/wikia/PortableInfobox/styles/PortableInfoboxMixins.scss
+++ b/extensions/wikia/PortableInfobox/styles/PortableInfoboxMixins.scss
@@ -32,11 +32,6 @@
 		text-align: center; // center smaller image inside infobox
 	}
 
-	.pi-image-thumbnail {
-		max-width: 100%;
-		height: auto;
-	}
-
 	.pi-caption {
 		@include hyphens();
 		color: $color-alternate-text;
